traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:26: error: Missing closing brace `}' assumed here
positionFinale()
^